[package]
name = "json-pretty"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "json_pretty"

[lib]
path = "src/lib.rs"
name = "json_pretty"

[dependencies]
anyhow = "1.0.71"
atty = "0.2.14"
clap = { version = "4.3.0", features = ["derive", "cargo"] }
colored = "2.0.0"
itertools = "0.10.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
